--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
-  "name": "@onwidget/astrowind",
+  "name": "blue-belt",
   "version": "1.0.0-beta.52",
   "description": "AstroWind: A free template using Astro 5.0 and Tailwind CSS. Astro starter theme.",
   "type": "module",
-  "private": true,
   "engines": {
     "node": "^18.17.1 || ^20.3.0 || >= 21.0.0"
   },
