--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "blue-belt",
+  "name": "ace-astrowind",
   "version": "1.0.0-beta.52",
   "description": "AstroWind: A free template using Astro 5.0 and Tailwind CSS. Astro starter theme.",
   "type": "module",
